package order;
syntax = "proto3";

service OrderService {
    rpc CreateOrder (OrderRequest) returns (OrderResponse) {}
}

message OrderRequest {
    string userId = 1;
    repeated Item items = 2;
}

message Item {
    string productId = 1;
    int32 quantity = 2;
}

message OrderResponse {
    string orderId = 1;
    string status = 2;
}